kubernetes/gitops/k8s-lab-01/istio-argocd-ingress/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - argocd.k8s.bevz.net
  gateways:
  - argocd-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - argocd.k8s.bevz.net
    route:
    - destination:
        host: argocd-server
        port:
          number: 443
